@@ -5,6 +5,7 @@ import java.util.Arrays;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
+import org.springframework.http.HttpMethod;
 import org.springframework.security.authentication.AuthenticationProvider;
 import org.springframework.security.authorization.AuthorizationManager;
 import org.springframework.security.config.Customizer;
@@ -24,59 +25,62 @@ import com.api.server.config.filter.JwtAuthenticationFilter;
 
 @Configuration
 @EnableWebSecurity
-// @EnableMethodSecurity(prePostEnabled = true)
 public class HttpSecurityConfig {
 
-    @Autowired
-    private AuthenticationProvider daoAuthProvider;
-
-    @Autowired
-    private JwtAuthenticationFilter jwtAuthenticationFilter;
-
-    @Autowired
-    private AuthenticationEntryPoint authenticationEntryPoint;
-
-    @Autowired
-    private AccessDeniedHandler accessDeniedHandler;
-
-    @Autowired
-    private AuthorizationManager<RequestAuthorizationContext> authorizationManager;    
+    @Autowired private AuthenticationProvider daoAuthProvider;
+    @Autowired private JwtAuthenticationFilter jwtAuthenticationFilter;
+    @Autowired private AuthenticationEntryPoint authenticationEntryPoint;
+    @Autowired private AccessDeniedHandler accessDeniedHandler;
+    @Autowired private AuthorizationManager<RequestAuthorizationContext> authorizationManager;
 
     @Bean
     public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
 
-        SecurityFilterChain filterChain = http
-                .cors(Customizer.withDefaults())    
-                .csrf(csrfConfig -> csrfConfig.disable())
-                .sessionManagement(
-                        sessMagConfig -> sessMagConfig.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
-                .authenticationProvider(daoAuthProvider)
-                .addFilterBefore(jwtAuthenticationFilter, UsernamePasswordAuthenticationFilter.class)
-                .authorizeHttpRequests(authReqConfig -> {
-                    authReqConfig.anyRequest().access(authorizationManager);
-                })
-                .exceptionHandling(exceptionConfig -> {
-                    exceptionConfig.authenticationEntryPoint(authenticationEntryPoint);
-                    exceptionConfig.accessDeniedHandler(accessDeniedHandler);
-                })    
-                .build();
+        return http
+            /* 1️⃣  CORS primero */
+            .cors(Customizer.withDefaults())
 
-        return filterChain;
+            /* 2️⃣  Sin estado porque usas JWT */
+            .csrf(csrf -> csrf.disable())
+            .sessionManagement(sess -> sess.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
 
+            /* 3️⃣  Autenticación */
+            .authenticationProvider(daoAuthProvider)
+            .addFilterBefore(jwtAuthenticationFilter, UsernamePasswordAuthenticationFilter.class)
+
+            /* 4️⃣  AUTORIZACIÓN
+                   - Dejamos pasar OPTIONS a todo
+                   - El resto lo maneja tu AuthorizationManager
+            */
+            .authorizeHttpRequests(auth -> auth
+                .requestMatchers(HttpMethod.OPTIONS, "/**").permitAll()
+                .anyRequest().access(authorizationManager)
+            )
+
+            /* 5️⃣  Manejadores de excepción */
+            .exceptionHandling(ex -> {
+                ex.authenticationEntryPoint(authenticationEntryPoint);
+                ex.accessDeniedHandler(accessDeniedHandler);
+            })
+
+            .build();
     }
 
     @Bean
     CorsConfigurationSource corsConfigurationSource() {
-        CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(Arrays.asList( "*", "https://api-fammeba.duckdns.org", "http://fammeba.duckdns.org", "http://ip-172-16-0-248.ec2.internal"));
+        CorsConfiguration config = new CorsConfiguration();
 
-        configuration.setAllowedMethods(Arrays.asList("*"));
-        configuration.setAllowedHeaders(Arrays.asList("*"));
-        configuration.setAllowCredentials(true);
+        /*  ⬇⬇  Usa origin patterns para wildcard + credenciales  ⬇⬇  */
+        config.setAllowedOriginPatterns(Arrays.asList("*"));   // o quita "*" y lista tus dominios
+        // —— Si prefieres concretos, quita la línea de arriba y deja:
+        // config.setAllowedOrigins(List.of("http://fammeba.duckdns.org"));
+
+        config.setAllowedMethods(Arrays.asList("GET","POST","PUT","DELETE","OPTIONS"));
+        config.setAllowedHeaders(Arrays.asList("*"));
+        config.setAllowCredentials(true);
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-        source.registerCorsConfiguration("/**", configuration);
+        source.registerCorsConfiguration("/**", config);
         return source;
     }
-
 }
